[metadata]
name = plover_clippy
version = 0.1.0
description = Logs inefficient strokes to a file for later review.
long_description = file: README.md
author = Andy Tockman
author_email = andy@tck.mn
license = GNU General Public License v3 (GPLv3)
url = https://github.com/tckmn/plover_clippy
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
keywords = plover plover_plugin

[options]
zip_safe = True
install_requires =
    plover>=4.0.0.dev8
py_modules =
    plover_clippy

[options.entry_points]
plover.extension =
    plover_clippy = plover_clippy:Clippy
